# DatasetMetadata

./: README.md  pyproject.toml  setup.cfg
datasetmd/: __init__.py  isotemplate.py
datasetmd/templates/: __init__.py  citationstring.py  iso19139.py  schemadotorg.py  schemadotorg_creatorlist.py
docs/: conf.py  contributing.rst  datasetmd.rst  features.rst  index.rst  installation.rst  marinemd.rst  modules.rst  roadmap.rst
