[build-system]
requires = [
	"wheel",
	"setuptools"
]
build-backend = "setuptools.build_meta"

[project]
name = "DatasetMD"
version = 0.1
license = {file = "LICENSE.txt"}
readme = "README.md"

maintainers = [{name = "Adam Leadbetter", email = ""}]

dependencies = [
	"Jinja2>=3.0.1"
]

[project.optional-dependencies]
doc = [
	"Sphinx>=4.1.2",
	"sphinx-rtd-theme>=1.0.0"
]