[metadata]
name = DatasetMD
version = 0.0.1
author = Adam Leadbetter
description = A Python library for handling (spatial) metadata for (scientific / environmental) datasets
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/adamml/DatasetMetadata
classifiers = 
	Programming Language :: Python :: 3
	Operating System :: OS Independent
	
[options]
packages = find: