[metadata]
name = DatasetMD
version = 0.0.1
author = Adam Leadbetter
description = A Python library for handling (spatial) metadata for (scientific / environmental) datasets
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/adamml/DatasetMetadata
project_urls =
    Bug Tracker = https://github.com/adamml/DatasetMetadata/issues
    Source Code = https://github.com/adamml/DatasetMetadata
classifiers = 
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Operating System :: OS Independent
	Intended Audience :: Science/Research
	Natural Language :: English
	Topic :: Scientific/Engineering
	Topic :: Scientific/Engineering :: Atmospheric Science
	Topic :: Scientific/Engineering :: GIS	
	
[options]
packages = find: